# Auto-GPT

./: ai_settings.yaml  pyproject.toml
scripts/data/: prompt.txt
