[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Dario Zhang <zdclink@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_gpt"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
py = "^1.11.0"
pytest = "^7.2.1"
pytest-cover = "^3.0.0"
pytest-html = "^3.1.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pylint = "^2.16.2"
tox = "^3.28.0"
invoke = "^1.7.3"
setuptools = "^67.3.2"
sphinx = {version = "3.4.0", optional = true}
sphinx-rtd-theme = {version = "0.5.0", optional = true}
recommonmark = {version = "0.7.1", optional = true}
sphinx-markdown-tables = {version = "0.0.15", optional = true}
pyinstaller = "^5.8.0"
memory-profiler = "^0.61.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
